--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script type="importmap">
             {
               "imports": {
-                "three": "https://unpkg.com/three@0.160.1/build/three.module.js",
+                "three": "./three/build/three.module.js",
                 "three/addons/": "./three/examples/jsm/"
               }
             }
